--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="./css/app.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -27,11 +27,11 @@
     <nav class="header__navbar navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/images/logo.svg" alt="Sunnyside" class="header__logo">
+          <img src="./images/logo.svg" alt="Sunnyside" class="header__logo">
         </a>
         
         <button class="header__navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <img src="/images/icon-hamburger.svg" alt="">
+          <img src="./images/icon-hamburger.svg" alt="">
         </button>
         
         <div class="header__navbar-collapse collapse navbar-collapse" id="navbarNav">
@@ -56,7 +56,7 @@
     <div class="header__text">
       <h1 class="header__title">We are creatives</h1>
 
-      <img src="/images/icon-arrow-down.svg" alt="" class="header__arrow">
+      <img src="./images/icon-arrow-down.svg" alt="" class="header__arrow">
     </div>
 
   </header>
@@ -64,7 +64,7 @@
   <main>
     <section>
       <div>
-        <img src="/images/mobile/image-transform.jpg" alt="" class="img-fluid">
+        <img src="./images/mobile/image-transform.jpg" alt="" class="img-fluid">
       </div>
 
       <div class="bg-white p-5">
@@ -78,7 +78,7 @@
 
     <section>
       <div>
-        <img src="/images/mobile/image-stand-out.jpg" alt="" class="img-fluid">
+        <img src="./images/mobile/image-stand-out.jpg" alt="" class="img-fluid">
       </div>
 
       <div>
@@ -125,6 +125,6 @@
     </div>
   </footer>
 
-  <script src="/js/app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
