--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link-btn px-4" href="#">Contact</a>
+              <a class="nav-link nav-link-btn" href="#">Contact</a>
             </li>
           </ul>
         </div>
