--- a/index.html
+++ b/index.html
@@ -63,30 +63,50 @@
 
   <main>
     <section>
-      <div>
-        <img src="./images/mobile/image-transform.jpg" alt="" class="img-fluid">
-      </div>
+      <div class="row g-0">
+        <div class="col-lg-6 order-lg-2">
+          <img src="./images/mobile/image-transform.jpg" alt="" class="img-fluid w-100 h-100">
+        </div>
 
-      <div class="bg-white p-5">
-        <h2>Transform your brand</h2>
+        <div class="col-lg-6 bg-white order-lg-1">
+          <div class="p-10 text-center text-lg-start d-flex flex-column justify-content-center h-100">
+            <div class="col-inner">
+              <h2 class="mb-30">Transform your brand</h2>
 
-        <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+              <p class="text-muted text-md">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
 
-        <p><a href="#">Learn more</a></p>
+              <p>
+                <a href="#" class="more-link">
+                  <span>Learn more</span>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
     <section>
-      <div>
-        <img src="./images/mobile/image-stand-out.jpg" alt="" class="img-fluid">
-      </div>
+      <div class="row g-0">
+        <div class="col-lg-6">
+          <img src="./images/mobile/image-stand-out.jpg" alt="" class="img-fluid w-100">
+        </div>
 
-      <div>
-        <h2>Stand out to the right audience</h2>
+        <div class="col-lg-6 bg-white">
+          <div class="p-10 text-center text-lg-start d-flex flex-column justify-content-center h-100">
+            <div class="col-inner">
+              <h2 class="mb-30">Stand out to the right audience</h2>
 
-        <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+              <p class="text-muted text-md">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
 
-        <p><a href="#">Learn more</a></p>
+              <p>
+                <a href="#" class="more-link more-link--red">
+                  <span>Learn more</span>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
