--- a/index.html
+++ b/index.html
@@ -142,23 +142,49 @@
       </div>
     </section>
 
-    <section>
-      
+    <section class="testimonials-section">
+      <div class="container">
+        <h2 class="testimonials-heading">Client testimonials</h2>
+
+        <div class="row">
+          <div class="col-lg-4">
+            <figure class="testimonial">
+              <img src="./images/image-emily.jpg" alt="" width="72" height="72" class="rounded-circle">
+
+              <blockquote>
+                  <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+              </blockquote>
+
+              <figcaption>Emily R. <span>Marketing Director</span></figcaption>
+            </figure>
+          </div>
+
+          <div class="col-lg-4">
+            <figure class="testimonial">
+              <img src="./images/image-thomas.jpg" alt="" width="72" height="72" class="rounded-circle">
+
+              <blockquote>
+                  <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+              </blockquote>
+
+              <figcaption>Thomas S. <span>Chief Operating Officer</span></figcaption>
+            </figure>
+          </div>
+
+          <div class="col-lg-4">
+            <figure class="testimonial">
+              <img src="./images/image-jennie.jpg" alt="" width="72" height="72" class="rounded-circle">
+
+              <blockquote>
+                  <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+              </blockquote>
+
+              <figcaption>Jennie F. <span>Business Owner</span></figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
     </section>
-
-    Client testimonials
-
-    We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-    Emily R.
-    Marketing Director
-
-    Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-    Thomas S.
-    Chief Operating Officer
-
-    Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-    Jennie F.
-    Business Owner
   </main>
 
   <footer>
