Minor styling and image dimension fixes

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <nav class="header__navbar navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./images/logo.svg" alt="Sunnyside" class="header__logo">
+          <img src="./images/logo.svg" alt="Sunnyside" class="header__logo" width="170" height="33">
         </a>
         
         <button class="header__navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <img src="./images/icon-hamburger.svg" alt="">
+          <img src="./images/icon-hamburger.svg" alt="" width="24" height="18">
         </button>
         
         <div class="header__navbar-collapse collapse navbar-collapse" id="navbarNav">
@@ -56,7 +56,7 @@
     <div class="header__text">
       <h1 class="header__title">We are creatives</h1>
 
-      <img src="./images/icon-arrow-down.svg" alt="" class="header__arrow">
+      <img src="./images/icon-arrow-down.svg" alt="" class="header__arrow" width="36" height="114">
     </div>
 
   </header>
@@ -73,7 +73,7 @@
             <div class="col-inner">
               <h2 class="mb-30">Transform your brand</h2>
 
-              <p class="text-muted text-md">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+              <p class="text-md">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
 
               <p>
                 <a href="#" class="more-link">
@@ -97,7 +97,7 @@
             <div class="col-inner">
               <h2 class="mb-30">Stand out to the right audience</h2>
 
-              <p class="text-muted text-md">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+              <p class="text-md">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
 
               <p>
                 <a href="#" class="more-link more-link--red">
