Minor spacing tweaks to the content sections and testimonials

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </div>
             
             <div class="col-image__text text-dark-desaturated-cyan">
-              <h3 class="mb-4">Graphic design</h3>
+              <h3 class="text-dark-desaturated-cyan mb-4">Graphic design</h3>
               <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
             </div>
           </div>
@@ -214,7 +214,7 @@
             </div>
             
             <div class="col-image__text text-dark-blue">
-              <h3 class="mb-4">Photography</h3>
+              <h3 class="text-dark-blue mb-4">Photography</h3>
               <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
             </div>
           </div>
@@ -226,7 +226,7 @@
       <div class="container">
         <h2 class="testimonials-heading">Client testimonials</h2>
 
-        <div class="row">
+        <div class="row testimonials-row">
           <div class="col-lg-4">
             <figure class="testimonial">
               <img src="./images/image-emily.jpg" alt="" width="72" height="72" class="rounded-circle">
