Add styles for image gallery above footer

--- a/index.html
+++ b/index.html
@@ -265,6 +265,38 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <div class="row g-0 gallery">
+        <div class="col-6 col-lg-3">
+          <div class="ratio ratio-1x1">
+            <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
+            <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-3">
+          <div class="ratio ratio-1x1">
+            <img src="./images/mobile/image-gallery-orange.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
+            <img src="./images/desktop/image-gallery-orange.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-3">
+          <div class="ratio ratio-1x1">
+            <img src="./images/mobile/image-gallery-cone.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
+            <img src="./images/desktop/image-gallery-cone.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-3">
+          <div class="ratio ratio-1x1">
+            <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
+            <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
