--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
     </section>
 
     <section>
+      <h2 class="visually-hidden">Gallery</h2>
       <div class="row g-0 gallery">
         <div class="col-6 col-lg-3">
           <div class="ratio ratio-1x1">
