Small styling tweaks to headings and spacing

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     
     <nav class="header__navbar navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand ms-lg-2" href="#">
           <img src="./images/logo.svg" alt="Sunnyside" class="header__logo" width="170" height="33">
         </a>
         
@@ -167,7 +167,7 @@
         </div>
 
         <div class="col-lg-6 bg-white">
-          <div class="p-10 text-center text-lg-start d-flex flex-column justify-content-center h-100">
+          <div class="p-10 p-10--right text-center text-lg-start d-flex flex-column justify-content-center h-100">
             <div class="col-inner">
               <h2 class="mb-30">Stand out to the right audience</h2>
 
