--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
     <div class="header__text">
       <h1 class="header__title">We are creatives</h1>
 
-      <img src="./images/icon-arrow-down.svg" alt="" class="header__arrow" width="36" height="114">
+      <a href="#top" class="header__arrow">
+        <img src="./images/icon-arrow-down.svg" alt="arrow down" class="header__arrow" width="36" height="114">
+      </a>
     </div>
 
   </header>
 
   <main>
-    <section>
+    <section id="top">
       <div class="row g-0">
         <div class="col-lg-6 order-lg-2">
           <img src="./images/mobile/image-transform.jpg" alt="" class="img-fluid w-100 h-100">
