Add hovers to section images

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     <section id="top">
       <div class="row g-0">
         <div class="col-lg-6 order-lg-2">
-          <img src="./images/mobile/image-transform.jpg" alt="" class="img-fluid w-100 h-100">
+          <a href="#" class="image-link">
+            <img src="./images/mobile/image-transform.jpg" alt="" class="img-fluid w-100 h-100">
+          </a>
         </div>
 
         <div class="col-lg-6 bg-white order-lg-1">
@@ -80,7 +82,9 @@
     <section>
       <div class="row g-0">
         <div class="col-lg-6">
-          <img src="./images/mobile/image-stand-out.jpg" alt="" class="img-fluid w-100 h-100">
+          <a href="#" class="image-link">
+            <img src="./images/mobile/image-stand-out.jpg" alt="" class="img-fluid w-100 h-100">
+          </a>
         </div>
 
         <div class="col-lg-6 bg-white">
@@ -182,29 +186,37 @@
       <div class="row g-0 gallery">
         <div class="col-6 col-lg-3">
           <div class="ratio ratio-1x1">
-            <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
-            <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+            <a href="#" class="image-link">
+              <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
+              <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+            </a>
           </div>
         </div>
 
         <div class="col-6 col-lg-3">
           <div class="ratio ratio-1x1">
-            <img src="./images/mobile/image-gallery-orange.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
-            <img src="./images/desktop/image-gallery-orange.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+            <a href="#" class="image-link">
+              <img src="./images/mobile/image-gallery-orange.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
+              <img src="./images/desktop/image-gallery-orange.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+            </a>
           </div>
         </div>
 
         <div class="col-6 col-lg-3">
           <div class="ratio ratio-1x1">
-            <img src="./images/mobile/image-gallery-cone.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
-            <img src="./images/desktop/image-gallery-cone.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+            <a href="#" class="image-link">
+              <img src="./images/mobile/image-gallery-cone.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
+              <img src="./images/desktop/image-gallery-cone.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+            </a>
           </div>
         </div>
 
         <div class="col-6 col-lg-3">
           <div class="ratio ratio-1x1">
-            <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
-            <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+            <a href="#" class="image-link">
+              <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="" class="img-fluid w-100 h-100 d-block d-lg-none">
+              <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="" class="img-fluid w-100 h-100 d-none d-lg-block">
+            </a>
           </div>
         </div>
       </div>
@@ -213,8 +225,9 @@
 
   <footer class="footer">
     <div class="container">
-
-      <img src="./images/logo-footer.svg" alt="Sunnyside" class="footer__logo img-fluid" width="170" height="33">
+      <a href="#">
+        <img src="./images/logo-footer.svg" alt="Sunnyside" class="footer__logo img-fluid" width="170" height="33">
+      </a>
 
       <ul class="footer__links list-inline">
         <li class="list-inline-item"><a href="#">About</a></li>
